# Fortran-Asteroid-Retrieval-Toolkit

./: .gitignore  README.md  citation.cff
MIDACO_wrappers/: README.md  midaco.c  midaco_interface.f90
Pre-filter/: a.out  constants.mod  old_routine_backup.f08  pref.out  prefilter.f08  prefilter.out  prefilter_lyceum.f08  prefilter_lyceum_mod.f08  prefilter_lyceum_rh120.f08  prefilter_timedependent.f08  prefilter_windows.f08  results.txt
Pre-filter/2019/: iain.f90  invRotationMatrix_final.m  precision_kinds.mod  pref.out  prefilter.f08  results.txt  states_to_oe.m  successful_OEs.txt
asteroid_optimiser/: .gitignore  CMakeLists.txt  README.md  get_desired_targets.m
asteroid_optimiser/MIDACO/: CMakeLists.txt  README.md
asteroid_optimiser/MIDACO/2020-01-24_3390109/: MIDACO_SCREEN.TXT
asteroid_optimiser/MIDACO/2020-01-28_3390109/: MIDACO_HISTORY.TXT  MIDACO_PARETOFRONT.TXT  MIDACO_SCREEN.TXT  MIDACO_SOLUTION.TXT
asteroid_optimiser/MIDACO/mod/: bspline_module.mod  bspline_oo_module.mod  bspline_sub_module.mod  iau_orientation_module.mod  math_module.mod  matrix_module.mod  rk_module_variable_step.mod
asteroid_optimiser/MIDACO/src/: ancillary_data.f90  compute_spline.f90  main.f90  problem_parameters.f90  state_determination.f90  variable_initialisation.f90
asteroid_optimiser/MIDACO_MPI/: CMakeLists.txt  build.sh
asteroid_optimiser/MIDACO_MPI/src/: ancillary_data.f90  ancillary_data_3d.f90  compute_spline.f90  compute_spline_3d.f90  main.OLD.f90  main.f90  midaco.c  midaco_interface.f90  problem_parameters.f90  state_determination.f90  validation.f90  variable_initialisation.f90
asteroid_optimiser/MIDACO_discrete/: CMakeLists.txt
asteroid_optimiser/MIDACO_discrete/2020-01-24_3390109/: MIDACO_PARETOFRONT.TXT  MIDACO_SOLUTION.TXT
asteroid_optimiser/MIDACO_discrete/mod/: bspline_kinds_module.mod  complex_step_module.mod  eispack_module.mod  halo_orbit_module.mod  rk_module.mod  transformation_module.mod
asteroid_optimiser/MIDACO_discrete/src/: compute_spline.f90  constants.f90  main.f90  problem_parameters.f90  variable_initialisation.f90
asteroid_optimiser/data/: smb_spk
asteroid_optimiser/ephemeris/: build.sh
asteroid_optimiser/ephemeris/mod/: base_class_module.mod  celestial_body_module.mod  geopotential_module.mod  gravity_module.mod  minpack_module.mod  numbers_module.mod
asteroid_optimiser/ephemeris/src/: global_minimum.mod  main.f90  state_determination.f90  state_determination.mod  state_finder_imp.f90
asteroid_optimiser/global/: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  conics_bugfix.out  conics_bugfix_3435539.out
asteroid_optimiser/global/mod/: base_class_module.mod  crtbp_module.mod  ephemeris_module.mod  fortran_astrodynamics_toolkit.mod  geometry_module.mod  gooding_module.mod  halo_orbit_module.mod  kind_module.mod  modified_equinoctial_module.mod  newton_module.mod  orbital_mechanics_module.mod  random_module.mod  time_module.mod
asteroid_optimiser/global/src/: fit.f90  fit_common.mod  global_minimum.mod  main.f90  problem.f90  problem_parameters.f90  state_determination.f90  state_determination.mod  state_determination_orig.f90  testfunc.f90
asteroid_optimiser/global_test/: CMakeLists.txt  build.sh  global.txt
asteroid_optimiser/global_test/mod/: analytical_ephemeris_module.mod  random_module.mod
asteroid_optimiser/global_test/src/: lambert_transfer_module.f90  main.f90  precision.f90  state_determination.f90  state_determination.mod
asteroid_optimiser/local/: CMakeLists.txt  README.md  build.sh
asteroid_optimiser/local/mod/: bplane_module.mod  celestial_body_module.mod  complex_step_module.mod  geodesy_module.mod  geometry_module.mod  jpl_ephemeris_module.mod  kepler_module.mod  obliquity_module.mod  time_module.mod
asteroid_optimiser/local/src/: bobyqb.f  calfun.f.OLD  calfun.f90  main.f  main_old.f  state_determination.f90  state_finder_imp.f90
asteroid_optimiser/low_memory/: CMakeLists.txt  README.md  build.sh  rebuild.sh
asteroid_optimiser/low_memory/src/: ancillary_data.f90  compute_spline.f90  constants.f90  global_to_local.f90  integrator.f90  main.f90  midaco_interface.f90  problem_parameters.f90  sorting_routines.f90  state_determination.f90  variable_initialisation.f90
asteroid_optimiser/mod/: geopotential_module.mod  math_module.mod  numbers_module.mod
asteroid_optimiser/mpi/: CMakeLists.txt  build.sh
asteroid_optimiser/mpi/mod/: conversion_module.mod  geodesy_module.mod  orbital_mechanics_module.mod  relative_motion_module.mod  standish_module.mod  vector_module.mod
asteroid_optimiser/mpi/src/: global.f90  main.f90  main_orig.f90  problem_parameters.f90  state_determination.f90
asteroid_optimiser/src/: Fortran_Lambert_Vallado.f90  rotator.f90  state_finder_imp.f90  state_finder_imp_jiggle.f90
asteroid_prefilter/: CMakeLists.txt  build.sh
cost_function/: .gitignore  CMakeLists.txt  build.sh
figures/: README.md  make_plots.ipynb
optimiser/: README.md
optimiser/global_search/: CMakeLists.txt  build.sh
optimiser/global_search/src/: ancillary_data.f90  ancillary_data_3d.f90  compute_spline.f90  compute_spline_3d.f90  integrator.cc  integrator.f90  licenseKey.h  main.f90  midaco_wrap.c  problem_parameters.f90  state_determination.f90  variable_initialisation.f90
optimiser/pareto_fronts/: CMakeLists.txt  build.sh
optimiser/pareto_fronts/src/: constants.f90  integrator.cc  integrator.f90  licenseKey.h  main.f90  midaco_interface.f90  problem_parameters.f90  sorting_routines.f90  state_determination.f90  variable_initialisation.f90
optimizer_matlab/: candidate_position.m  cost_function.m  cr3bpToGlobal.m~  globalTocr3bp.m  globalTocr3bp.m~  main.m  rotator.m  state_finder.m
parallel_pre_filter/: CMakeLists.txt  README.md  build.sh
pre_filter/: CMakeLists.txt  build.sh  constants.f90  prefilter.f08
pre_filter/src/: main.f90  problem_parameters.f90  variable_init.f90
prefilter/: CMakeLists.txt  README.md  clean.sh
prefilter/src/: variable_initialisation.f90
utility_functions/: check_jacobi.m  rotator.f90  rotator.out  test_module.f90
(+140 files in other folders)
